Bugfix for plaintext conversion
Ignore all groups beginning with \* keyword

--- a/nrtftree-test/nrtftree-test.csproj
+++ b/nrtftree-test/nrtftree-test.csproj
@@ -24,12 +24,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=3.8.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
@@ -52,6 +53,7 @@
     <Compile Include="NavigationTest.cs" />
     <Compile Include="NodeCollectionTest.cs" />
     <Compile Include="ObjectNodeTest.cs" />
+    <Compile Include="PlainTextTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RtfDocumentTest.cs" />
     <Compile Include="RtfPullParserTest.cs" />
@@ -94,6 +96,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="testdocs\testdoc5.rtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="testdocs\plaintext-test.rtf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="testdocs\unicodedoc.rtf">
@@ -167,6 +172,11 @@
     <None Include="testdocs\text2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="testdocs\plaintext-result.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
